# wopr

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yaml  deploy.yaml  lint.yaml  main.yaml
vincent/: __init__.py  __main__.py  config.py
vincent/exts/: stream.py
wopr/: __main__.py  config.py
wopr/exts/: assets.py  extensions.py  iqx.py  stream.py  xnode.py
