[tool.poetry]
name = "vincent"
version = "0.1.0"
description = ""
authors = ["Joe Banks <joe@urn1350.net>", "Chris Lovering <chris@jb3.dev>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
discord-py = "^2.2.2"
pynacl = "^1.5.0"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
loguru = "^0.7.0"

[tool.poetry.group.linting.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
ruff = "0.0.263"
pre-commit = "^3.2.2"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
start = "python -m vincent"
lint = "pre-commit run --all-files"
precommit = "pre-commit install"
isort = "isort ."

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
target-version = "py310"
extend-exclude = [".cache"]
ignore = [
    "ANN101", "ANN204",
    "D107", "D203", "D213"
]
line-length = 100
select = ["ANN", "B", "C4", "D", "DTZ", "E", "F", "ISC", "INT", "N", "PGH", "PIE", "Q", "RET", "RSE", "RUF", "S", "SIM", "T20", "TID", "UP", "W"]
